--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -56,6 +56,17 @@
         android:layout_marginStart="30dp"
         android:src="@drawable/menu" />
 
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
+        android:src="@drawable/add" />
+
     <!--<android.support.v7.widget.Toolbar-->
         <!--android:layout_height="wrap_content"-->
         <!--android:layout_width="match_parent"-->
