--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -30,7 +30,8 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="12dp"
                 android:layout_marginEnd="12dp"
-                android:layout_marginTop="5dp"/>
+                android:layout_marginTop="5dp"
+                android:alpha="0.7"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -42,7 +43,9 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_above="@+id/title"
-                android:layout_marginBottom="-5dp"/>
+                android:layout_marginBottom="-5dp"
+                android:textColor="#FFF"
+                android:alpha="0.65"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -54,9 +57,17 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
-                android:layout_marginBottom="8dp"/>
+                android:layout_marginBottom="8dp"
+                android:textColor="#FFF"/>
 
         </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/placeHolder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="?android:selectableItemBackground"
+            android:orientation="horizontal" />
 
     </android.support.v7.widget.CardView>
 
