--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -110,15 +110,63 @@
 
     </RelativeLayout>
 
-    <ListView
+    <android.support.design.widget.NavigationView
         android:id="@+id/left_drawer"
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:background="@color/colorPrimaryDark"/>
+        android:fitsSystemWindows="true"
+        android:background="@color/colorPrimaryDark">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ANTI TO-DO"
+                android:textSize="25sp"
+                android:letterSpacing="0.1"
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentTop="true"
+                android:textColor="#FFF"
+                android:layout_marginTop="40dp"/>
+
+            <TextView
+                android:id="@+id/desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="A to-do list with a twist!"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@+id/app_name"
+                android:alpha="0.7" />
+
+            <TextView
+                android:id="@+id/settings"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:gravity="center"
+                android:layout_marginBottom="10dp"
+                android:text="Settings"
+                android:layout_alignParentBottom="true"/>
+
+        </RelativeLayout>
+
+    </android.support.design.widget.NavigationView>
+
+    <!--<ListView-->
+        <!--android:id="@+id/left_drawer"-->
+        <!--android:layout_width="350dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:choiceMode="singleChoice"-->
+        <!--android:divider="@android:color/transparent"-->
+        <!--android:dividerHeight="0dp"-->
+        <!--android:background="@color/colorPrimaryDark"/>-->
 
 </android.support.v4.widget.DrawerLayout>
 
