--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="10dp"
+        card_view:cardElevation="3dp"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="8dp"
-        card_view:cardBackgroundColor="#EC407A">
+        card_view:cardBackgroundColor="#4CAF50">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -31,6 +31,7 @@
                 android:layout_marginRight="12dp"
                 android:layout_marginEnd="12dp"
                 android:layout_marginTop="5dp"
+                android:textColor="#FFF"
                 android:alpha="0.7"/>
 
             <TextView
