--- a/app/src/main/res/layout/activity_todo.xml
+++ b/app/src/main/res/layout/activity_todo.xml
@@ -147,6 +147,34 @@
                 android:alpha="0.7" />
 
             <TextView
+                android:id="@+id/thoughts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TODAY'S THOUGHTS"
+                android:letterSpacing="0.1"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="40dp"
+                android:layout_below="@+id/desc"
+                android:alpha="0.5"
+                android:layout_centerHorizontal="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="30dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginEnd="30dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="30dp"
+                android:gravity="top|left"
+                android:id="@+id/notes"
+                android:inputType="text|textMultiLine|textCapSentences"
+                android:layout_below="@+id/thoughts"
+                android:layout_above="@+id/settings"/>
+
+            <TextView
                 android:id="@+id/settings"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
