--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -40,13 +40,17 @@
                 android:id="@+id/tags"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginLeft="15dp"
-                android:layout_marginStart="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_above="@+id/title"
+                android:layout_marginLeft="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="-5dp"
                 android:textColor="#FFF"
-                android:alpha="0.65"/>
+                android:alpha="0.65"
+                android:maxLines="1"
+                android:ellipsize="end" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,8 +62,12 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginStart="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginBottom="8dp"
-                android:textColor="#FFF"/>
+                android:textColor="#FFF"
+                android:maxLines="1"
+                android:ellipsize="end" />
 
         </RelativeLayout>
 
